Removes fontawesome-all.js from index.html (will still need to remove from following pages), gets header-bar to span whole page and correctly sets a new container for page-top so carousel does too.  Got both set to appropriate colors, but still need to change background color of nav bar.  On to fix the nav bars and spacing!

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,14 @@
+.logo-top {
+  background-color: rgb(255, 255, 255);
+}
 
+.nortsea-black {
+  background-color: rgb(54, 54, 54);
+}
+
+.page-top {
+  background-color: rgb(49, 49, 49);
+}
+.whole-page {
+  background-color: blue;
+}
